# fwupd

contrib/: fwupd.spec.in
data/: meson.build
data/motd/: 85-fwupd.motd.in  README.md  fwupd-refresh.service  meson.build
plugins/: meson.build
plugins/synaptics-rmi/: fu-plugin-synaptics-rmi.c  fu-synaptics-rmi-common.c  fu-synaptics-rmi-common.h  fu-synaptics-rmi-device.c  fu-synaptics-rmi-device.h  fu-synaptics-rmi-ps2-device.c  fu-synaptics-rmi-ps2-device.h  fu-synaptics-rmi-v5-device.c  fu-synaptics-rmi-v5-device.h  fu-synaptics-rmi-v7-device.c  fu-synaptics-rmi-v7-device.h  meson.build  synaptics-rmi.quirk
src/: fu-util.c
